--- a/package.json
+++ b/package.json
@@ -90,5 +90,8 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
+  },
+  "overrides": {
+    "react-leaflet": "4.2.1"
   }
 }
