--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "npm@10.9.3",
+  "engines": { "node": "22.x" },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
