--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,7 +1,34 @@
-project_id = "xxrnheknatbvtomldtwa"
+project_id = "ifepqhmkaotvnkfwufzw"
+
+[functions.fetch-news]
+verify_jwt = false
+
+[functions.analyze-news]
+verify_jwt = false
+
+[functions.extract-entities]
+verify_jwt = false
+
+[functions.extract-locations]
+verify_jwt = false
+
+[functions.enrich-query]
+verify_jwt = false
+
+[functions.fetch-bluesky]
+verify_jwt = false
+
+[functions.fetch-bluesky-real]
+verify_jwt = false
 
 [functions.fetch-gopher]
 verify_jwt = false
 
 [functions.fetch-military-rss]
 verify_jwt = false
+
+[functions.fetch-google]
+verify_jwt = false
+
+[functions.update-secret]
+verify_jwt = true
