--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
     "supabase:stop": "cd supabase && npx supabase stop",
     "supabase:push": "cd supabase && npx supabase db push",
     "supabase:deploy": "cd supabase && npx supabase functions deploy",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:watch": "vitest --watch",
     "prepare": "node -e \"try { require('husky').install() } catch (e) {}\""
   },
   "dependencies": {
@@ -87,6 +91,7 @@
     "@supabase/supabase-js": "^2.74.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/leaflet": "^1.9.20",
+    "@types/leaflet.heat": "^0.2.5",
     "@types/react-resizable": "^3.0.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -96,6 +101,7 @@
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.3",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
@@ -119,20 +125,28 @@
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.11",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitest/ui": "^1.0.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "happy-dom": "^12.10.3",
+    "identity-obj-proxy": "^3.0.0",
     "lovable-tagger": "^1.1.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vitest": "^1.0.4"
   }
 }
